--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
+    "ngx-pagination": "^3.1.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
