--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "angular2-image-upload": "^1.0.0-rc.0",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
+    "font-awesome": "^4.7.0",
     "ng2-toastr": "^4.1.2",
     "ngx-pagination": "^3.1.0",
+    "ngx-sharebuttons": "^4.0.0-beta0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
