--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular2-image-upload": "^1.0.0-rc.0",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
+    "filestack-js": "^1.8.0",
     "font-awesome": "^4.7.0",
     "ng2-toastr": "^4.1.2",
     "ngx-pagination": "^3.1.0",
