--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "express": "^4.16.3",
     "filestack-js": "^1.8.0",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "ng2-toastr": "^4.1.2",
+    "ngx-gallery": "^5.10.0",
     "ngx-pagination": "^3.1.0",
     "ngx-sharebuttons": "^4.0.0-beta0",
     "rxjs": "^5.4.2",
